update authorized file size to 2000k and used extensions instead of MIME Types in HTML, JS and PHP + update Stripe API version

--- a/templates/admin/purchase/create.html.twig
+++ b/templates/admin/purchase/create.html.twig
@@ -62,7 +62,7 @@
 				Merci de télécharger un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-purchase-bill-size display-none">
-				Merci de télécharger un fichier de maximum 300 000 bytes.
+				Merci de télécharger un fichier de maximum 2 000 000 bytes.
 			</p>
 			{{ form_errors(adminPurchaseCreateForm.bill) }}
 		</div>
