--- a/templates/sign-up/sign-up.html.twig
+++ b/templates/sign-up/sign-up.html.twig
@@ -29,7 +29,7 @@
 				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-user-picture-size display-none">
-				Merci de téléverser un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 2 000 000 bytes.
 			</p>
 			{{ form_errors(signUpForm.picture) }}
 		</div>
