--- a/templates/admin/delivery-mode/update.html.twig
+++ b/templates/admin/delivery-mode/update.html.twig
@@ -25,7 +25,7 @@
 				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-delivery-mode-picture-size display-none">
-				Merci de téléverser un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 2 000 000 bytes.
 			</p>
 			{{ form_errors(adminDeliveryModeUpdateForm.upload) }}
 		</div>
