--- a/templates/main/contact.html.twig
+++ b/templates/main/contact.html.twig
@@ -79,7 +79,7 @@
 				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-contact-file-size display-none">
-				Merci de téléverser un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 2 000 000 bytes.
 			</p>
 			{{ form_errors(contactForm.upload) }}
 
