--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -27,7 +27,7 @@
 				Merci de téléverser un fichier au format PDF, PNG, JPEG ou SVG.
 			</p>
 			<p class="error-message error-message_color_red error-message-user-picture-size display-none">
-				Merci de téléverser un fichier de maximum 300 000 bytes.
+				Merci de téléverser un fichier de maximum 2 000 000 bytes.
 			</p>
 			{{ form_errors(userProfileForm.upload) }}
 		</div>
@@ -78,8 +78,8 @@
 		</button>
 		{{ form_end(userProfileForm) }}
 		{# <a class="display-none page__link page__delete-link page__delete-my-user-account-link page__user-delete-link page__link_background-color_red page__link_color_white" id="delete-my-user-account-link" href="{{ path('user_delete', {'id':app.user.id, 'token':csrf_token('user-delete' ~ app.user.id)} ) }}" data-userfirstname="{{ app.user.firstName }}" data-userlastname="{{ app.user.lastName }}">
-					Supprimer mon compte
-				</a> #}
+							Supprimer mon compte
+						</a> #}
 	</section>
 {% endblock %}
 {# START: user_profile #}
